Add css to recipe site

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
+    <div id="title">Odin Recipes</div>
+    <ul id="recipes">
         <li><a href="recipes/tiramisu.html">Tiramisu</a></li>
         <li><a href="recipes/lemoncake.html">Lemon Blender Cake</a></li>
         <li><a href="recipes/keylimepie.html">Key Lime Pie</a></li>
