--- a/recipes/keylimepie.html
+++ b/recipes/keylimepie.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes - Key Lime Pie</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Key Lime Pie</h1>
+    <div id="title">Key Lime Pie</div>
 
     <p>
         <!-- img tags are self closing -->
-        <img src="./keylimepie.webp" height="300" width="350">
+        <img class="title-image" src="./keylimepie.webp">
     </p>
 
     <p>
