--- a/recipes/lemoncake.html
+++ b/recipes/lemoncake.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes - Whole Lemon Blender Cake</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Whole Lemon Blender Cake</h1>
+    <div id="title">Whole Lemon Blender Cake</div>
 
     <p>
         <!-- img tags are self closing -->
-        <img src="./lemonblendercake.webp" height="300" width="350">
+        <img class="title-image" src="./lemonblendercake.webp">
     </p>
 
     <p>
-        <h4>Whole Lemon Blender Cake is made with—you guessed it—lemons! Its thick and citrus-forward batter takes a spin in the blender and then bakes in a loaf pan. The result is a sweet and moist lemon cake that is topped with a lemony sugar glaze for a little added sweetness.</h4>
+        <h4>Whole Lemon Blender Cake is made with (you guessed it) lemons! Its thick and citrus-forward batter takes a spin in the blender and then bakes in a loaf pan. The result is a sweet and moist lemon cake that is topped with a lemony sugar glaze for a little added sweetness.</h4>
     </p>
 
     <h2>Ingredients</h3>
