--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes - Tiramisu</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Tiramisu</h1>
+    <div id="title">Tiramisu</div>
 
     <p>
         <!-- img tags are self closing -->
-        <img src="./tiramisu.webp" height="300" width="350">
+        <!-- height="auto" allows you to adjust the size keeping og proportions-->
+        <img class="title-image" src="./tiramisu.webp">
     </p>
 
     <p>
