Add box model elements to the recipe pages

--- a/recipes/lemoncake.html
+++ b/recipes/lemoncake.html
@@ -15,37 +15,39 @@
     </p>
 
     <p>
-        <h4>Whole Lemon Blender Cake is made with (you guessed it) lemons! Its thick and citrus-forward batter takes a spin in the blender and then bakes in a loaf pan. The result is a sweet and moist lemon cake that is topped with a lemony sugar glaze for a little added sweetness.</h4>
+        <h4 class="description">Whole Lemon Blender Cake is made with (you guessed it) lemons! Its thick and citrus-forward batter takes a spin in the blender and then bakes in a loaf pan. The result is a sweet and moist lemon cake that is topped with a lemony sugar glaze for a little added sweetness.</h4>
     </p>
 
-    <h2>Ingredients</h3>
-    <p>
-        <ul>
-            <li>baking spray</li>
-            <li>1 large think skinned lemon</li>
-            <li>1 cup granulated sugar</li>
-            <li>1/2 cup canola oil</li>
-            <li>2 large eggs</li>
-            <li>1 teaspoon lemon extract</li>
-            <li>2 cups all-purpose flour</li>
-            <li>2 1/2 teaspoons baking powder</li>
-            <li>1/2 teaspoon kosher salt</li>
-            <li>1 cup powdered sugar</li>
-            <li>1 1/2 tablespoons squeezed lemon juice, plus zest for garnish</li>
-        </ul>
-    </p>
+    <div class="instructions">
+        <h2>Ingredients</h3>
+        <p>
+            <ul>
+                <li>baking spray</li>
+                <li>1 large think skinned lemon</li>
+                <li>1 cup granulated sugar</li>
+                <li>1/2 cup canola oil</li>
+                <li>2 large eggs</li>
+                <li>1 teaspoon lemon extract</li>
+                <li>2 cups all-purpose flour</li>
+                <li>2 1/2 teaspoons baking powder</li>
+                <li>1/2 teaspoon kosher salt</li>
+                <li>1 cup powdered sugar</li>
+                <li>1 1/2 tablespoons squeezed lemon juice, plus zest for garnish</li>
+            </ul>
+        </p>
 
-    <h2>Steps</h3>
-    <p>
-        <ol>
-            <li>Gather all ingredients. Preheat oven to 350 degrees F (175 degrees C). Lightly coat a 9-x-5-inch loaf pan with baking spray and line with parchment, leaving a 2-inch overhang on all 4 sides. Spray parchment lightly with baking spray.</li>
-            <li>Trim and discard lemon ends, slice lemon into 8 wedges and remove seeds. Place seeded lemon wedges, sugar, canola oil, sour cream, eggs, and lemon extract in a blender. Add flour, baking powder, and salt. Process until just combined and a smooth, thick batter is formed, about 25 seconds, stopping to scrape down sides and gently stirring every 5 seconds. Pour batter in the prepared pan.</li>
-            <li>Bake in the preheated oven until a wooden pick inserted into center comes out clean, 50 to 55 minutes, tenting with foil after 30 minutes. Let cool in the pan for 10 minutes, using parchment overhang as handles, carefully remove cake from pan. Transfer to a wire rack; let cool at room temperature, 20 minutes.</li>
-            <li>Whisk together powdered sugar and lemon juice in a medium bowl until combined.</li>
-            <li>Spread powdered sugar mixture over cooled cake and garnish with lemon zest.</li>
-            <li>Enjoy!</li>
-        </ol>
-    </p>
+        <h2>Steps</h3>
+        <p>
+            <ol>
+                <li>Gather all ingredients. Preheat oven to 350 degrees F (175 degrees C). Lightly coat a 9-x-5-inch loaf pan with baking spray and line with parchment, leaving a 2-inch overhang on all 4 sides. Spray parchment lightly with baking spray.</li>
+                <li>Trim and discard lemon ends, slice lemon into 8 wedges and remove seeds. Place seeded lemon wedges, sugar, canola oil, sour cream, eggs, and lemon extract in a blender. Add flour, baking powder, and salt. Process until just combined and a smooth, thick batter is formed, about 25 seconds, stopping to scrape down sides and gently stirring every 5 seconds. Pour batter in the prepared pan.</li>
+                <li>Bake in the preheated oven until a wooden pick inserted into center comes out clean, 50 to 55 minutes, tenting with foil after 30 minutes. Let cool in the pan for 10 minutes, using parchment overhang as handles, carefully remove cake from pan. Transfer to a wire rack; let cool at room temperature, 20 minutes.</li>
+                <li>Whisk together powdered sugar and lemon juice in a medium bowl until combined.</li>
+                <li>Spread powdered sugar mixture over cooled cake and garnish with lemon zest.</li>
+                <li>Enjoy!</li>
+            </ol>
+        </p>
+    </div>
     <a href="../index.html">Recipe List</a>
     
 </body>
